# ai-gateway-dockers

./: .gitignore  README.md
_common/: coldstart.py  hf-download
babelcast-subtitle/: Dockerfile  Dockerfile.lazy  idle_watchdog.py  server.py  start.sh
dit360/: Dockerfile  coldstart.py  idle_watchdog.py  server.py  start.sh
evolution-api/: Dockerfile  fly.toml
hamer/: Dockerfile
hy-motion/: Dockerfile  README.md  mixamo_template.fbx  retarget_fbx.py  server.py  start.sh
hybrik-x/: Dockerfile  README.md  server.py  start.sh  worker.py
kokoro-tts/: Dockerfile  server.py
lam/: Dockerfile  server.py  start.sh
modal/: babelcast.py  groq.py  kokoro.py  moss_tts.py  translategemma.py  tts.py  tts_benchmark.py
parle-gateway/: Dockerfile  fly.toml
snapgpu-runtime/: Dockerfile  README.md  pyproject.toml  start.sh
snapgpu-runtime-babelcast/: Dockerfile
snapgpu-runtime/gateway/: __init__.py  db.py  main.py
snapgpu-runtime/gateway/builder/: __init__.py  image_builder.py  snapshot.py
snapgpu-runtime/gateway/registry/: __init__.py
snapgpu-runtime/gateway/routes/: __init__.py  apps.py  health.py  images.py  invoke.py  snapshots.py
snapgpu-runtime/gateway/scheduler/: __init__.py  autoscaler.py  container_pool.py  gpu_allocator.py
snapgpu-runtime/snapgpu/: __init__.py  app.py  cls.py  endpoint.py  gpu.py  image.py  serialization.py  volume.py
snapgpu-runtime/worker/: __init__.py  health.py  runner.py
teams-bot/: Dockerfile
test-lifecycle/: Dockerfile  server.py
trellis2/: Dockerfile  README.md  server.py  start.sh
ultravox-s2s/: Dockerfile  (+3 more)
(+13 files in other folders)
