[project]
name = "snapgpu"
version = "0.1.0"
description = "GPU serverless platform with fast cold starts — deploy ML models with Modal-style decorators"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "cloudpickle>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.20",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.0.0"]
worker = ["docker>=7.0.0"]
redis = ["redis>=5.0.0"]
all = ["snapgpu[cli,worker,redis]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
snapgpu = "cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["snapgpu*", "gateway*", "worker*", "cli*"]
